--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,22 +3,18 @@
     <table>
       <thead>
         <tr>
-          <th scope="col">掲示板名</th>
-          <th scope="col">ジャンル</th>
-          <th scope="col">投稿者</th>
+          <th>掲示板名</th>
+          <th>ジャンル</th>
+          <th>投稿者</th>
         </tr>
       </thead>
       <tbody>
         <% @posts.each do |post| %>
           <tr>
-              <td><%= post.item %></td>
-              <td><%= post.location %></td>
-              <td><%= post.deliver %></td>
               <td><%= post.name %></td>
+              <td><%= post.type %></td>
               <td><%= post.created_at.to_s(:datetime_base) %></td>
               <td><%= post.updated_at.to_s(:datetime_base) %></td>
-              <td><%= link_to '詳細', post %></td>
-              <td><%= link_to "削除" , post, method: :delete, data: {confirm: "投稿記事を削除しますか？", cancel: "キャンセル", commit: "削除する", title: "削除の確認"} %></td>
           </tr>
         <% end %>
       </tbody>
