--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -12,7 +12,7 @@
         <% @posts.each do |post| %>
           <tr>
               <td><%= post.name %></td>
-              <td><%= post.type %></td>
+              <td><%= post.category %></td>
               <td><%= post.created_at.to_s(:datetime_base) %></td>
               <td><%= post.updated_at.to_s(:datetime_base) %></td>
           </tr>
