--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -15,6 +15,7 @@
               <td><%= post.category %></td>
               <td><%= post.created_at.to_s(:datetime_base) %></td>
               <td><%= post.updated_at.to_s(:datetime_base) %></td>
+              <td><%= link_to "削除" , post, method: :delete, data: {confirm: "投稿記事を削除しますか？", cancel: "キャンセル", commit: "削除する", title: "削除の確認"} %></td>
           </tr>
         <% end %>
       </tbody>
