view修正 作成日、更新日追加

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,6 +6,8 @@
           <th>掲示板名</th>
           <th>ジャンル</th>
           <th>投稿者</th>
+          <th>作成日</th>
+          <th>更新日</th>
         </tr>
       </thead>
       <tbody>
